Fix dark mode borders

--- a/cmd/webserver/assets/sass/_global.scss
+++ b/cmd/webserver/assets/sass/_global.scss
@@ -177,7 +177,7 @@ body.dark {
             border-color: #454d55;
         }
 
-        td {
+        td, th {
             border-top: 1px solid #343a40;
         }
 
